--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: minima
 title: "CoderEx"
 author: "王梓舟"
-description: "More possibilities for coder"
+description: "More possibilities for coders."
